css/styles.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* RESET ENDS HERE*/
body{
    width: 100vw;
    height: 100vh;
}
main{
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
    grid-template-areas: 
    "results results results results"
    "seven eight nine division"
    "four five six multiplication"
    "one two three minus"
    "zero compute delete plus";

    /* "results results result
    s results"
    "seven eight nine division"
    "four five six multiplication"
    "one two three minus"
    "zero zero zero compute"; */
}
.button{
    background-color: rgb(32, 34, 37);
    display: flex;
    align-items: center;
    justify-content: center;
}
.button h1{
    font-size: 5rem;
    color: white;
    font-family: 'Montserrat', sans-serif;
}
#results{
    grid-area: results;
    background-color: rgb(54, 57, 63);
    color: white;
    font-size: 5rem;
    display: flex;
    align-items: flex-end;
    flex-direction: row-reverse;
}
#nine{
    grid-area: nine;
}
#eight{
    grid-area: eight;
}
#seven{
    grid-area: seven;
}
#six{
    grid-area: six;
}
#five{
    grid-area: five;
}
#four{
    grid-area: four;
}
#three{
    grid-area: three;
}
#two{
    grid-area: two;
}
#one{
    grid-area: one;
}
#division{
    grid-area: division;
}
#multiplication{
    grid-area: multiplication;
}
#plus{
    grid-area: plus;
}
#minus{
    grid-area: minus;
}
#delete{
    grid-area: delete;
}
#compute{
    grid-area: compute;
}

